2011-05-01 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C, scripts/STATGUI.py : Query LMON for RM PID in launch case + GUI get launcher exe from launch command

2011-04-22 Gregory L. Lee <lee218@llnl.gov>
	* src/STATBench.C : Fixed arg list in call to launchMrnetTree
	* src/STAT_FrontEnd.[h, C] : applicationNodeSet_ renamed to applicationNodeMultiSet_.  communicationNodeList_ changed from list to set and renamed to communicationNodeSet_ to avoid duplicate entries.

2011-04-19 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : patch from Nathan Hjelm for BackEnd hostname matching

2011-04-14 Gregory L. Lee <lee218@llnl.gov>
	* : added option to enable use of application nodes for communication processes
	* src/STAT_FrontEnd.C, src/STAT_FrontEnd.h : Added query to alps to get apid on Cray XT, which can be passed to MRNet via "apid" attrs argument to CreateNetworkFE.  Also prototype for "aprun pid" attrs argument, which isn't supported yet (as of MRNet 3.0.1)

2011-04-11 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : added "DDT LaunchMON Prefix" option + improved handling of DDT launching
	* scripts/STATview.py : while gtk.events_pending() -> if gtk.events_pending() b/c of hang on jaguar

2011-04-05 Gregory L. Lee <lee218@llnl.gov>
	* src/Makefile.am : added -Wl,-E to LDFLAGS
	* : code clean up

2011-04-01 Gregory L. Lee <lee218@llnl.gov>
	* : Updated documentation screenshots

2011-03-29 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : Renamed STAT's pack funtion to avoid collisions
	* scripts/STATGUI.py : Improved handling of application exit on sample multiple

2011-03-28 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : moved StackWalker exit check (mistakenly put in if handleDebugEvent == false branch)
	* src/STAT_FrontEnd.C : check LMON state in detach ack

2011-03-09 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added some ability to handle edge labels with just count + 1 representative
