@@ -1,4 +1,5 @@
 2011-05-01 Gregory L. Lee <lee218@llnl.gov>
+	* src/STAT_FrontEnd.C : Fix nodeList handling for when to read nodes.txt
 	* src/STAT_FrontEnd.C, scripts/STATGUI.py : Query LMON for RM PID in launch case + GUI get launcher exe from launch command
 
 2011-04-22 Gregory L. Lee <lee218@llnl.gov>
